# NexTest

./: .clippy.toml  .editorconfig  .gitignore  2026-05-14-nextshell-design.md  CONTRIBUTING.md  Cargo.toml  README.md  package.json  pnpm-lock.yaml  rustfmt.toml
.cargo/: config.toml
.github/workflows/: build-windows.yml  deploy-server.yml  test.yml
