[workspace]
resolver = "2"
members = [
  "packages/core",
  "packages/server",
  "packages/desktop/src-tauri",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["NexTest Team"]
license = "MIT"
repository = "https://github.com/Myustery/NexTest"

[workspace.dependencies]
tokio = { version = "1.37", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.8", features = ["v4", "serde"] }